<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Noodles">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">
        <!--⋏⋏⋏⋏⋏拉麵選單⋏⋏⋏⋏⋏-->
        <ScrollView
                style="@style/max_width_style"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical"
                tools:layout_editor_absoluteY="2dp"
                tools:layout_editor_absoluteX="2dp">
            <LinearLayout style="@style/max_width_style"
                          android:orientation="vertical">
                <!--第一行圖示-->
                <LinearLayout style="@style/max_width_style">

                    <ImageButton style="@style/MenuBtn_style"
                                 android:id="@+id/nd_1"
                                 android:src="@drawable/nd_1"
                                 android:clickable="true" android:focusable="true"/>

                    <ImageButton style="@style/MenuBtn_style"
                                 android:id="@+id/nd_2"
                                 android:src="@drawable/nd_2"
                                 android:clickable="true" android:focusable="true"/>

                    <ImageButton style="@style/MenuBtn_style"
                                 android:id="@+id/nd_3"
                                 android:src="@drawable/nd_3"
                                 android:clickable="true" android:focusable="true"/>

                </LinearLayout>
                <!--第一行名稱-->
                <LinearLayout style="@style/max_width_style">

                    <TextView style="@style/MenuLittle_Text_style"
                              android:text="@string/nd_1"/>

                    <TextView style="@style/MenuLittle_Text_style"
                              android:text="@string/nd_2"/>

                    <TextView style="@style/MenuLittle_Text_style"
                              android:text="@string/nd_3"/>

                </LinearLayout>
                <!--第二行圖示-->
                <LinearLayout style="@style/max_width_style">

                    <ImageButton style="@style/MenuBtn_style"
                                 android:id="@+id/nd_4"
                                 android:src="@drawable/nd_4"
                                 android:clickable="true" android:focusable="true"/>

                    <ImageButton style="@style/MenuBtn_style"
                                 android:id="@+id/nd_5"
                                 android:src="@drawable/nd_5"
                                 android:clickable="true" android:focusable="true"/>

                    <ImageButton style="@style/MenuBtn_style"
                                 android:id="@+id/nd_6"
                                 android:src="@drawable/nd_6"
                                 android:clickable="true" android:focusable="true"/>

                </LinearLayout>
                <!--第二行名稱-->
                <LinearLayout style="@style/max_width_style">

                    <TextView style="@style/MenuLittle_Text_style"
                              android:text="@string/nd_4"/>

                    <TextView style="@style/MenuLittle_Text_style"
                              android:text="@string/nd_5"/>

                    <TextView style="@style/MenuLittle_Text_style"
                              android:text="@string/nd_6"/>

                </LinearLayout>
                <!--第三行圖示-->
                <LinearLayout style="@style/max_width_style">

                    <ImageButton style="@style/MenuBtn_style"
                                 android:id="@+id/nd_7"
                                 android:src="@drawable/nd_7"
                                 android:clickable="true" android:focusable="true"/>
                    <TextView android:layout_width="0dp"
                              android:layout_height="0dp"
                              android:layout_weight="2"/>
                </LinearLayout>
                <!--第三行名稱-->
                <LinearLayout style="@style/max_width_style">

                    <TextView style="@style/MenuLittle_Text_style"
                              android:text="@string/nd_7"/>

                    <TextView android:layout_width="0dp"
                              android:layout_height="0dp"
                              android:layout_weight="2"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
    <!--⋏⋏⋏⋏⋏⋏⋏⋏⋏⋏點餐清單⋏⋏⋏⋏⋏⋏⋏⋏⋏⋏-->
    <RelativeLayout style="@style/max_width_style">
        <LinearLayout style="@style/max_width_style"
                      android:layout_alignParentBottom="true"
                      android:background="#fffd98">
            <!--點餐數量-->
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:paddingHorizontal ="10dp"
                          android:paddingVertical = "4dp">
                <TextView
                        style="@style/Amount_food"
                        android:id="@+id/A"/>
                <TextView
                        style="@style/Amount_food"
                        android:id="@+id/B"/>
                <TextView
                        style="@style/Amount_food"
                        android:id="@+id/C"/>
            </LinearLayout>
            <!--減少按鈕-->
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:gravity="center"
                          android:paddingVertical = "4dp">
                <!--微調對齊文字-->
                <ImageButton
                        style="@style/Amount_delete"
                        android:layout_marginTop="3dp"
                        android:onClick="D1"
                        android:id="@+id/A2"/>
                <ImageButton
                        style="@style/Amount_delete"
                        android:onClick="D2"
                        android:id="@+id/B2"/>
                <ImageButton
                        style="@style/Amount_delete"
                        android:onClick="D3"
                        android:id="@+id/C2"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <!--⋎⋎⋎⋎⋎⋎⋎⋎⋎⋎點餐清單⋎⋎⋎⋎⋎⋎⋎⋎⋎⋎-->
</androidx.constraintlayout.widget.ConstraintLayout>